--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="site-footer">
 
-  <div class="wrap">
+  <!--<div class="wrap">-->
+    <div class="container">
 
     <h2 class="footer-heading">{{ site.title }}</h2>
 
