--- a/app/assets/_less/style.less
+++ b/app/assets/_less/style.less
@@ -24,6 +24,8 @@ body {
     font-family: "LinotypeUniversW01-Thin 723610", arial;
     font-size: 26px;
     line-height: 28px;
+    color: #fff;
+    background-color: #F26A57;
 }
 #wrapper {
    min-height:100%;
